modified:   _config.yml         new file:   _data/about.yml         modified:   _data/general.yml         new file:   _data/intro_text.yml         new file:   _data/navigation.yml         new file:   _data/sub_navigation.yml         new file:   _includes/about_contact.html         modified:   _includes/head.html         new file:   _includes/navigation.html         modified:   _layouts/default.html         new file:   _sass/about_contact.scss         modified:   _sass/index.scss         new file:   _sass/typography.scss         new file:   _sass/variables.scss         modified:   assets/css/style.scss         new file:   assets/fonts/Switzer-Variable.ttf         new file:   assets/fonts/Switzer-Variable.woff         new file:   assets/fonts/Switzer-Variable.woff2         new file:   assets/fonts/Switzer-VariableItalic.ttf         new file:   assets/fonts/Switzer-VariableItalic.woff         new file:   assets/fonts/Switzer-VariableItalic.woff2         modified:   assets/js/script.js         new file:   images/uploads/.DS_Store         new file:   images/uploads/intro-portrait.webp         new file:   images/uploads/intro.webp         modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
 ---
-title: Alex Irschfeld
+title: Malcolm Function
 ---
 
-<h1>Hello World!</h1>
+<section id="section-1">
+  <div id="section-1-left">
+    <div class="intro text">
+      <p>{{ site.data.intro_text.intro_text }}</p>
+    </div>
+  </div>
 
+  <div id="section-1-right">
+    <div class="intro image"></div>
+    <div class="intro mobile-text mobile">
+      <p>{{ site.data.intro_text.intro_text }}</p>
+    </div>
+  </div>
+</section>
+
+{% for item in site.data.sub_navigation %}
+  <section class="content">
+    <div class="category-head" id="{{ item.item }}">
+      <h2>{{ item.item }}</h2>
+    </div>
+    <div class=""></div>
+    <div class="">{{ item.item | last }}</div>
+  </section>
+{% endfor %}
+
+
+
+
+<!-- Sub navigation fixed at bottom left -->
+
+<div class="light"></div>
