--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Malcolm Function
 
 <section id="section-1">
   <div id="section-1-left">
-    <div class="intro text">
+    <!--  <div class="intro text">
       <p>{{ site.data.intro_text.intro_text }}</p>
-    </div>
+    </div> -->
   </div>
 
   <div id="section-1-right">
